--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ textarea {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
+  padding: 0;
 }
 ol,
 ul {
